# simple_httpd

./: .gitmodules  Changes.md  Makefile  README.md  dune-project  index.html  simple_httpd.chaml.opam  simple_httpd.opam  simple_httpd.opam.template  simple_httpd_camlzip.opam  simple_httpd_caqti.opam  simple_httpd_chaml.opam  tiny_httpd_domain.opam  tiny_httpd_domain_camlzip.opam
.github/workflows/: gh-pages.yml  main.yml  pages.yml
dev/: index.html
dev/simple_httpd/: index.html
dev/simple_httpd/Simple_httpd/: index.html
dev/simple_httpd/Simple_httpd/Io/: index.html
dev/simple_httpd/Simple_httpd_dir/: index.html
dev/simple_httpd/Simple_httpd_dir/Embedded_fs/: index.html
dev/simple_httpd/Simple_httpd_dir/module-type-VFS/: index.html
dev/simple_httpd/Simple_httpd_domain/: index.html
dev/simple_httpd/Simple_httpd_domain/Io/: index.html
dev/simple_httpd/Simple_httpd_html/: index.html
dev/simple_httpd/Simple_httpd_html_/A/: index.html
dev/simple_httpd/Simple_httpd_server/: index.html
dev/simple_httpd/Simple_httpd_server/Cookies/: index.html
dev/simple_httpd/Simple_httpd_server/Headers/: index.html
dev/simple_httpd/Simple_httpd_server/Meth/: index.html
dev/simple_httpd/Simple_httpd_server/Middleware/: index.html
dev/simple_httpd/Simple_httpd_server/Request/: index.html
dev/simple_httpd/Simple_httpd_server/Response/: index.html
dev/simple_httpd/Simple_httpd_server/Response_code/: index.html
dev/simple_httpd/Simple_httpd_server/Route/: index.html
dev/simple_httpd/Simple_httpd_server/SetCookie/: index.html
dev/simple_httpd/Simple_httpd_server/module-type-SERVER_SENT_GENERATOR/: index.html
dev/simple_httpd/Simple_httpd_session/: index.html
dev/simple_httpd/Simple_httpd_stream/: index.html
dev/simple_httpd/Simple_httpd_stream/Out_buf/: index.html
dev/simple_httpd/Simple_httpd_util/: index.html
dev/simple_httpd/Simple_httpd_util/LinkedList/: index.html
dev/tiny_httpd_domain/: index.html
dev/tiny_httpd_domain/Tiny_httpd/: index.html
dev/tiny_httpd_domain/Tiny_httpd_buf/: index.html
dev/tiny_httpd_domain/Tiny_httpd_dir/: index.html
dev/tiny_httpd_domain/Tiny_httpd_dir/Embedded_fs/: index.html
dev/tiny_httpd_domain/Tiny_httpd_dir/module-type-VFS/: index.html
dev/tiny_httpd_domain/Tiny_httpd_domains/: index.html
dev/tiny_httpd_domain/Tiny_httpd_html/: index.html
dev/tiny_httpd_domain/Tiny_httpd_html_/: index.html
dev/tiny_httpd_domain/Tiny_httpd_html_/A/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Headers/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Meth/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Middleware/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Request/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Response/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Response_code/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/Route/: index.html
dev/tiny_httpd_domain/Tiny_httpd_server/SetCookie/: index.html
dev/tiny_httpd_domain/Tiny_httpd_stream/: index.html
dev/tiny_httpd_domain/Tiny_httpd_util/: index.html
dev/tiny_httpd_domain_camlzip/: index.html
dev/tiny_httpd_domain_camlzip/Tiny_httpd_domain_camlzip/: index.html
doc/: dune  index.mld  index.mld.template  template.mld  vfs_pack.mld
examples/: caqti.ml  dune  echo.ml  minimal.ml  run_test.sh  sse_server.ml  test_output.txt.expected
examples/files/: bar.chaml  foo.html  shell.chaml  tyr.chaml
examples/files/sub/: yolo.html
simple_httpd/Simple_httpd/: index.html
simple_httpd/Simple_httpd_buf/: index.html
simple_httpd/Simple_httpd_dir/: index.html
simple_httpd/Simple_httpd_domain/: index.html
simple_httpd/Simple_httpd_html_/: index.html
simple_httpd/Simple_httpd_util/: index.html
simple_httpd_camlzip/: index.html
simple_httpd_camlzip/Simple_httpd_camlzip/: index.html
src/: Address.ml  Address.mli  Admin.ml  Admin.mli  Admin.mli~  Admin.ml~  Async.ml  Async.mli  Auth.ml  Auth.mli  Camlzip.ml  Camlzip.mli  Cookies.ml  Cookies.mli  Dir.ml  Dir.mli  Headers.ml  Headers.mli  Host.ml  Host.mli  Html.ml  Input.ml  Input.mli  Key.ml  Key.mli  Log.ml  Log.mli  Method.ml  Method.mli  Output.ml  Output.mli  Process.ml  Process.mli  Request.ml  Request.mli  Resources.ml  Resources.mli  Response.ml  Response.mli  Response_code.ml  (+49 more)
src/camlzip/: Simple_httpd_camlzip.ml  Simple_httpd_camlzip.mli  Tiny_httpd_domain_camlzip.ml  dune
src/caqti/: dune  simple_httpd_caqti.ml  simple_httpd_caqti.mli
src/chaml/: Chaml.ml  Parser.ml  dune  table-1.csv  table-2.csv  table-3.csv  table-4.csv  table-5.csv  table-6.csv
src/qtest/: dune  preamble.ml
template/: dune  server.ml  starts.sh
template/site1/: foo.html  index.chaml
template/site1_dyn/: bar.html
template/site2/: index.chaml
tests/: bar.php  bench.ml  bench.sh  big.csv  chaml.html  chaml.txt  chaml_report.txt  chunked-out.expect  chunked-ssl-out.expect  chunked.sh  chunked_ktls.sh  chunked_ssl.sh  dl-stress-ssl.expect  dl-stress.expect  dune  echo1.expect  echo1.sh  php.txt  plot.gplot  plot.py  plot2.py  process-stress.expect  serve_files.ml  sessions_clean_up.php  small.csv  sse_count.expect  sse_count.sh  stress-ktls.sh  stress-prc.sh  stress-ssl.sh  stress.sh
tests/files/: big  dune  tyr.chaml
tests/files/sub/subsub/: b.txt
tests/html/: dune  makehtml.ml
tests/timings/: apache.html  apache.txt  apache_php.html  apache_php.txt  apache_php_report.txt  apache_php_report_ssl.txt  apache_php_ssl.html  apache_php_ssl.txt  apache_report.txt  apache_report_ssl.txt  apache_ssl.html  apache_ssl.txt  bar.html  bench.csv  bench_chaml.csv  big-ssl1.csv  big-ssl1b.csv  big2.csv  chaml.html  chaml.txt  chaml_ktls.html  chaml_ktls.txt  chaml_report.txt  chaml_report_ktls.txt  chaml_report_ssl.txt  chaml_ssl.html  chaml_ssl.txt  dynamic.csv  nginx.html  nginx.txt  nginx_php.html  nginx_php.txt  nginx_php_report.txt  nginx_php_report_ssl.txt  nginx_php_ssl.html  nginx_php_ssl.txt  nginx_report.txt  nginx_report_ssl.txt  nginx_ssl.html  nginx_ssl.txt  (+21 more)
(+2 files in other folders)
