opam-version: "2.0"
authors: ["Simon Cruanes" "Christophe Rallalli"]
maintainer: "christophe@raffalli.eu"
license: "MIT"
synopsis: "Simple HTTP server using ocaml 5 domains"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "3.0" }
  "pacomb" { >= "1.4.0" }
  "ssl" { >= "0.7.0" }
  "polly" { >= "0.4.0" }
  "magic-mime" { <= "1.3.0" }
  "ocaml" { >= "5.3.0" }
  "camlzip" { >= "1.11" }
  "cppo" {build}
  "odoc" {with-doc}
  "qtest" { >= "2.9" & with-test}
  "conf-libcurl" {with-test}
  "qcheck" {with-test & >= "0.9" }
  "csv" {with-test}
]
tags: [ "http" "domain" "server" "simple_httpd" "http_of_dir" "simplehttpserver" ]
homepage: "https://github.com/craff/simple_httpd/"
doc: "https://raffalli.eu/simple_httpd/simple_httpd"
bug-reports: "https://github.com/craff/simple_httpd/issues"
dev-repo: "git+https://github.com/craff/simple_httpd.git"
post-messages: "simple http server, with non blocking IOs and domain. Also
ships with a `http_of_dir` and `vfs_pack` program and a language equivalent to
php."
