opam-version: "2.0"
version: "0.12"
authors: ["Simon Cruanes" "Christophe Raffalli"]
maintainer: "christophe@raffalli.eu"
license: "MIT"
synopsis: "Interface to camlzip for simple_httpd"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name] {with-doc}
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { >= "2.0" }
  "camlzip" {>= "1.06"}
  "simple_httpd" { = version }
  "ocaml" { >= "4.04.0" }
  "odoc" {with-doc}
]
tags: [ "http" "thread" "server" "gzip" "camlzip" ]
homepage: "https://github.com/craff/simple_httpd/"
doc: "https://craff.github.io/simple_httpd/"
bug-reports: "https://github.com/craff/simple_httpd/issues"
dev-repo: "git+https://github.com/craff/simple_httpd.git"
