opam-version: "2.0"
version: "0.12"
authors: ["Simon Cruanes" "Christophe Rallalli"]
maintainer: "christophe@raffalli.eu"
license: "MIT"
synopsis: "Minimal HTTP server using ocaml 5 domains"
build: [
  ["dune" "build" "@install" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" { >= "2.0" }
  "poll"
  "result"
  "seq"
  "ocaml" { >= "5.00.0" }
  "odoc" {with-doc}
  "qtest" { >= "2.9" & with-test}
  "conf-libcurl" {with-test}
  "qcheck" {with-test & >= "0.9" }
  "ounit2" {with-test}
  "ptime" {with-test}
]
tags: [ "http" "domain" "server" "tiny_httpd_domain" "http_of_dir" "simplehttpserver" ]
homepage: "https://github.com/craff/tiny_httpd_domain/"
doc: "https://craff.github.io/tiny_httpd_domain/"
bug-reports: "https://github.com/craff/tiny_httpd_domain/issues"
dev-repo: "git+https://github.com/craff/tiny_httpd_domain.git"
post-messages: "tiny http server, with non blocking IOs and domain. Also ships with a `http_of_dir` program."
