
(executable
  (name sse_server)
  (modules sse_server)
  (libraries simple_httpd unix))

(executable
  (name sse_client)
  (modules sse_client)
  (libraries unix))

(executable
  (name echo)
  (flags :standard -warn-error -a+8)
  (ocamlopt_flags -O3)
  (preprocess (per_module
    ((action (run %{bin:chaml} %{input-file})) echo)))
  (modules echo vfs)
  (libraries simple_httpd magic-mime))

(executable
  (name caqti)
  (flags :standard -warn-error -a+8)
  (modules caqti)
  (libraries caqti caqti.blocking simple_httpd simple_httpd_caqti caqti-driver-postgresql))

(executable
  (name minimal)
  (flags :standard -warn-error -a+8)
  (modules minimal)
  (libraries simple_httpd))

(rule
  (targets test_output.txt)
  (deps (:script ./run_test.sh) ./sse_client.exe ./sse_server.exe)
  (enabled_if (= %{system} "linux"))
  (package simple_httpd)
  (action
    (with-stdout-to %{targets} (run %{script}))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (deps test_output.txt)
  (action
    (diff test_output.txt.expected test_output.txt)))

; produce an embedded FS
(rule
  (targets vfs.ml store)
  (deps (source_tree files) (:out test_output.txt.expected))
  (enabled_if (= %{system} "linux"))
  (action (run %{bin:vfs_pack} -o vfs.ml
	       --destination=store/
               --mirror=files/
               --file=test_out.txt,%{out}
               )))
