
(library
  (name simple_httpd)
  (public_name simple_httpd)
  (libraries unix seq ssl http-cookie polly magic-mime)
  (flags :standard -safe-string -warn-error -a+8)
  (ocamlopt_flags -O3)
  (foreign_stubs (language c) (names stubs))
  (private_modules headers_ html_)
  (wrapped true))

(rule
  (targets Html_.ml)
  (deps (:bin ./gen/gentags.exe))
  (action (with-stdout-to %{targets} (run %{bin}))))

(rule
  (targets Headers_.ml)
  (deps (:bin ./gen/compile_headers_fun.exe) field-names.csv)
  (action (with-stdout-to %{targets} (run %{bin} field-names.csv))))

(rule
  (targets Headers_.mli)
  (deps (:bin ./gen/compile_headers_mli.exe) field-names.csv)
  (action (with-stdout-to %{targets} (run %{bin} field-names.csv))))
