
(library
  (name simple_httpd)
  (public_name simple_httpd)
  (libraries unix seq ssl http-cookie polly magic-mime camlzip threads)
  (flags :standard -safe-string -warn-error -a+8)
  (ocamlopt_flags -O3)
  (foreign_stubs (language c) (names stubs))
  (private_modules headers_)
  (preprocess (per_module
    ((action (run %{bin:chaml} %{input-file})) Status Stats Dir)))
  (wrapped true))

(rule
  (targets Headers_.ml)
  (deps (:bin ./gen/compile_headers_fun.exe) field-names.csv)
  (action (with-stdout-to %{targets} (run %{bin} field-names.csv))))

(rule
  (targets Headers_.mli)
  (deps (:bin ./gen/compile_headers_mli.exe) field-names.csv)
  (action (with-stdout-to %{targets} (run %{bin} field-names.csv))))

(rule
  (targets Response_code.ml)
  (deps (:bin ./gen/compile_status_code.exe) http-status-codes.csv)
  (action (with-stdout-to %{targets} (run %{bin} http-status-codes.csv))))

(rule
  (targets Response_code.mli)
  (deps (:bin ./gen/compile_status_mli.exe) http-status-codes.csv)
  (action (with-stdout-to %{targets} (run %{bin} http-status-codes.csv))))
