;echo

(rule
  (targets echo1.out)
  (deps (:bin ../examples/echo.exe) echo1.sh ../examples/store)
  (locks /port)
  (enabled_if (= %{system} "linux"))
  (package simple_httpd)
  (action (with-stdout-to %{targets} (run ./echo1.sh %{bin}))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff echo1.expect echo1.out)))

;sse

(rule
  (targets sse_count.out)
  (deps (:bin ../examples/sse_server.exe) sse_count.sh)
  (locks /port)
  (enabled_if (= %{system} "linux"))
  (package simple_httpd)
  (action (with-stdout-to %{targets} (run ./sse_count.sh %{bin}))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff sse_count.expect sse_count.out)))

;chunked

(rule
  (targets chunked-out)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k chunked.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to chunked-out
                          (run ./chunked.sh %{bin} HTTP))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff chunked-out.expect chunked-out)))

;chunked-ssl

(rule
  (targets chunked-ssl-out)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k domain.crt domain.key
  	chunked.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./chunked.sh %{bin} SSL))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff chunked-out.expect chunked-ssl-out)))

;chunked-ktls

(rule
  (targets chunked-ktls-out)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k domain.crt domain.key
  	chunked.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./chunked.sh %{bin} KTLS))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff chunked-out.expect chunked-ktls-out)))

;stress
(rule
  (targets dl-stress)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k stress.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./stress.sh %{bin} 15 HTTP))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff dl-stress.expect dl-stress)))

;ssl stress
(rule
  (targets dl-stress-ssl)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k domain.crt domain.key
  	stress.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./stress.sh %{bin} 15 SSL))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff dl-stress.expect dl-stress-ssl)))


;ktls stress
(rule
  (targets dl-stress-ktls)
  (deps (:bin ../src/bin/http_of_dir.exe) ./store files/foo_50k domain.crt domain.key
  	stress.sh)
  (locks /port)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./stress.sh %{bin} 15 KTLS))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff dl-stress.expect dl-stress-ktls)))

(rule
  (targets domain.crt domain.key)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "openssl req -newkey rsa:2048 -keyout domain.key -x509 -days 365 -out domain.crt -nodes -subj '/C=/ST=/L=/O=/CN=localhost' 2> /dev/null")))

; produce an embedded FS
(rule
  (targets vfs.ml store)
  (deps files/foo_1k files/foo_5k files/foo_10k files/foo_50k
        files/foo_100k files/foo_500k files/foo_1M files/foo_5M
	files/foo_10M files/foo_50M files/foo_100M)
  (enabled_if (= %{system} "linux"))
  (action (run %{bin:vfs_pack} -o vfs.ml
  	       -v
	       --destination=store/
               --mirror=files/
               )))

(executable
  (name bench)
  (flags :standard -warn-error -3)
  (modules bench)
  (libraries unix str csv))

(executable
  (name serve_files)
  (flags :standard -warn-error -3)
  (ocamlopt_flags -O3)
  (modules serve_files vfs)
  (libraries simple_httpd))

;process stress
(rule
  (targets process-stress)
  (deps (:bin ../examples/echo.exe) ./store stress-prc.sh ../examples/store)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (with-stdout-to %{targets}
                          (run ./stress-prc.sh %{bin} 15))))

(rule
  (alias runtest)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (action (diff process-stress.expect process-stress)))
