(library
  (name simple_httpd_chaml)
  (package simple_httpd)
  (enabled_if (= %{system} "linux"))
  (libraries unix pacomb)
  (flags :standard -safe-string -warn-error -a+8)
  (preprocess (per_module ((pps pacomb.ppx) Parser)))
  (wrapped false))

(rule
  (targets entities.ml)
  (deps (:bin ../gen/compile_entities.exe) entities.json)
  (action (with-stdout-to %{targets} (run %{bin} entities.json))))

(rule
  (targets Html.ml Html.mli)
  (deps (:bin ../gen/compile_html5.exe) table-1.csv table-3.csv table-4.csv table-5.csv)
  (action (run %{bin})))
