
(executable
  (name qtest)
  (modes native)
  (flags :standard -warn-error -a+8 -w -33)
  (libraries qcheck-core qcheck ounit2 simple_httpd))

(rule
 (deps (glob_files ../*.ml{,i}) preamble.ml)
 (targets qtest.ml)
 (action (run qtest --preamble-file preamble.ml
   extract --quiet %{deps} -o %{targets})))

(rule
  (alias runtest)
  (package simple_httpd)
  (action (run ./qtest.exe)))
