
(executable
  (name qtest)
;  (modes native)
  (flags :standard -warn-error -a+8 -w -33)
  (libraries qcheck-core qcheck simple_httpd camlzip))

(rule
 (deps (glob_files ../*[!.]??.ml) preamble.ml)
 (targets qtest.ml)
 (action (run qtest --preamble-file preamble.ml
   extract --quiet %{deps} -o %{targets})))

(rule
  (alias runtest)
  (package simple_httpd)
  (action (run ./qtest.exe)))
