(rule
  (targets foo_1k)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1k count=1")))

(rule
  (targets foo_10k)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1k count=10")))

(rule
  (targets foo_100k)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1k count=100")))

(rule
  (targets foo_1M)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1M count=1")))

(rule
  (targets foo_10M)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1M count=10")))

(rule
  (targets foo_100M)
  (enabled_if (= %{system} "linux"))
  (action
    (bash "dd if=/dev/random of=%{targets} bs=1M count=100")))

;(rule
;  (targets foo_1G)
;  (enabled_if (= %{system} "linux"))
;  (action
;    (bash "dd if=/dev/random of=%{targets} bs=1M count=1000")))
